test/e2e/testdata/ratelimit-distinct-overrides.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-distinct-overrides
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: distinct-overrides-ratelimit
  rateLimit:
    type: Global
    global:
      rules:
        - clientSelectors:
            - headers:
                - name: x-user-id
                  type: Distinct
          limit:
            requests: 3
            unit: Hour
          overrides:
            - value: client-a
              limit:
                requests: 5
                unit: Hour
            - value: client-b
              limit:
                requests: 6
                unit: Hour
            - value: client-c
              limit:
                requests: 1
                unit: Hour
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: distinct-overrides-ratelimit
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /get
      backendRefs:
        - name: infra-backend-v1
          port: 8080
